ucslint (8.0.0-14) unstable; urgency=medium

  * Bug #49704: Convert to Python 3
  * Bug #51105: Check invalid Python string literals

 -- Philipp Hahn <hahn@univention.de>  Wed, 20 May 2020 12:55:10 +0200

ucslint (8.0.0-13) unstable; urgency=low

  * Bug #42480: Speed-up spelling detection
  * Bug #49520: Fix ucslint.overrides application

 -- Philipp Hahn <hahn@univention.de>  Tue, 21 May 2019 12:33:51 +0200

ucslint (8.0.0-12) unstable; urgency=low

  * Bug #28497: Fix migration to dh-python

 -- Philipp Hahn <hahn@univention.de>  Tue, 21 May 2019 08:37:44 +0200

ucslint (8.0.0-11) unstable; urgency=medium

  * Bug #28497: migrate ucslint to dh-python

 -- Florian Best <best@univention.de>  Mon, 20 May 2019 18:53:37 +0200

ucslint (8.0.0-10) unstable; urgency=low

  * Bug #42480: Speed-up spelling detection

 -- Philipp Hahn <hahn@univention.de>  Mon, 20 May 2019 15:21:03 +0200

ucslint (8.0.0-9) unstable; urgency=low

  * Bug #42480: Ignore more files.

 -- Philipp Hahn <hahn@univention.de>  Mon, 20 May 2019 10:23:59 +0200

ucslint (8.0.0-8) unstable; urgency=low

  * Bug #42480: Ignore more files.

 -- Philipp Hahn <hahn@univention.de>  Tue, 14 May 2019 15:25:01 +0200

ucslint (8.0.0-7) unstable; urgency=medium

  * Bug #31771: execute 0020-flake8 with python2

 -- Florian Best <best@univention.de>  Fri, 10 May 2019 12:54:50 +0200

ucslint (8.0.0-6) unstable; urgency=medium

  * Bug #31771: enable ucslint plugin 0020-flake8

 -- Florian Best <best@univention.de>  Sat, 04 May 2019 17:18:18 +0200

ucslint (8.0.0-5) unstable; urgency=medium

  * Bug #28497: check for dh-python instead of python_support

 -- Florian Best <best@univention.de>  Sat, 04 May 2019 11:04:17 +0200

ucslint (8.0.0-4) unstable; urgency=low

  * Bug #28499: debian/changelog machine readable DEP-5

 -- Philipp Hahn <hahn@univention.de>  Wed, 27 Feb 2019 08:33:42 +0100

ucslint (8.0.0-3) unstable; urgency=low

  * Bug #37203: handle missing package
